--- a/src/design/css/layout/main.css
+++ b/src/design/css/layout/main.css
@@ -86,11 +86,11 @@
 
 /* justify-content */
 
-.ui-u-justify-content--end {
+.ui-u-justify-content--flex-end {
     justify-content: flex-end;
 }
 
-.ui-u-justify-content--start {
+.ui-u-justify-content--flex-start {
     justify-content: flex-start;
 }
 
@@ -169,7 +169,7 @@
 /* flex-wrap */
 
 .ui-u-flex-wrap--wrap {
-    flex-wrap: wrap-reverse;
+    flex-wrap: wrap;
 }
 
 .ui-u-flex-wrap--nowrap {
