--- a/src/design/css/main.css
+++ b/src/design/css/main.css
@@ -3,6 +3,7 @@
 /* Normalize.css */
 
 @import url("./normalize.css");
+@import url("./reset.css");
 /* Token.css */
 
 /* Tokens must be declared first as lower css can be using these tokens */
