--- a/src/design/lib/grid/col/css/main.css
+++ b/src/design/lib/grid/col/css/main.css
@@ -2,118 +2,120 @@
 @import url("./col.sm.css") (min-width: 576px) and (max-width: 767px);
 @import url("./col.md.css") (min-width: 768px) and (max-width: 991px);
 @import url("./col.lg.css") (min-width: 992px);
-.ui-c-col {}
+.ui-c-col {
+    /* Empty by default */
+}
 
-.ui-col {
+.ui-l-col {
     flex-grow: 1;
     flex-basis: 0;
     max-width: 100%;
 }
 
-.ui-col-span--1 {
+.ui-l-col-span--1 {
     flex-basis: 8.33333333%;
     max-width: 8.33333333%;
 }
 
-.ui-col-span--2 {
+.ui-l-col-span--2 {
     flex-basis: 16.66666667%;
     max-width: 16.66666667%;
 }
 
-.ui-col-span--3 {
+.ui-l-col-span--3 {
     flex-basis: 25%;
     max-width: 25%;
 }
 
-.ui-col-span--4 {
+.ui-l-col-span--4 {
     flex-basis: 33.33333333%;
     max-width: 33.33333333%;
 }
 
-.ui-col-span--5 {
+.ui-l-col-span--5 {
     flex-basis: 41.66666667%;
     max-width: 41.66666667%;
 }
 
-.ui-col-span--6 {
+.ui-l-col-span--6 {
     flex-basis: 50%;
     max-width: 50%;
 }
 
-.ui-col-span--7 {
+.ui-l-col-span--7 {
     flex-basis: 58.33333333%;
     max-width: 58.33333333%;
 }
 
-.ui-col-span--8 {
+.ui-l-col-span--8 {
     flex-basis: 66.66666667%;
     max-width: 66.66666667%;
 }
 
-.ui-col-span--9 {
+.ui-l-col-span--9 {
     flex-basis: 75%;
     max-width: 75%;
 }
 
-.ui-col-span--10 {
+.ui-l-col-span--10 {
     flex-basis: 83.33333333%;
     max-width: 83.33333333%;
 }
 
-.ui-col-span--11 {
+.ui-l-col-span--11 {
     flex-basis: 91.66666667%;
     max-width: 91.66666667%;
 }
 
-.ui-col-span--12 {
+.ui-l-col-span--12 {
     flex-basis: 100%;
     max-width: 100%;
 }
 
-.ui-col-skip--0 {
+.ui-l-col-skip--0 {
     margin-left: 0;
 }
 
-.ui-col-skip--1 {
+.ui-l-col-skip--1 {
     margin-left: 8.33333333%;
 }
 
-.ui-col-skip--2 {
+.ui-l-col-skip--2 {
     margin-left: 16.66666667%;
 }
 
-.ui-col-skip--3 {
+.ui-l-col-skip--3 {
     margin-left: 25%;
 }
 
-.ui-col-skip--4 {
+.ui-l-col-skip--4 {
     margin-left: 33.33333333%;
 }
 
-.ui-col-skip--5 {
+.ui-l-col-skip--5 {
     margin-left: 41.66666667%;
 }
 
-.ui-col-skip--6 {
+.ui-l-col-skip--6 {
     margin-left: 50%;
 }
 
-.ui-col-skip--7 {
+.ui-l-col-skip--7 {
     margin-left: 58.33333333%;
 }
 
-.ui-col-skip--8 {
+.ui-l-col-skip--8 {
     margin-left: 66.66666667%;
 }
 
-.ui-col-skip--9 {
+.ui-l-col-skip--9 {
     margin-left: 75%;
 }
 
-.ui-col-skip--10 {
+.ui-l-col-skip--10 {
     margin-left: 83.33333333%;
 }
 
-.ui-col-skip--11 {
+.ui-l-col-skip--11 {
     margin-left: 91.66666667%;
 }
