--- a/src/design/lib/typography/Typography.css
+++ b/src/design/lib/typography/Typography.css
@@ -1,52 +1,86 @@
-/* global.css makes 10px == 1rem */
 .break-word {
   word-break: break-all;
 }
+
+.ui-c-typography {}
+
+.ui-c-typography.ui-typography-size--h1 {}
+
+.ui-c-typography.ui-typography-size--h2 {}
+
+.ui-c-typography.ui-typography-size--h3 {}
+
+.ui-c-typography.ui-typography-size--h4 {}
+
+.ui-c-typography.ui-typography-size--h5 {}
+
+.ui-c-typography.ui-typography-size--h6 {}
+
+.ui-c-typography.ui-typography-size--subtitle1 {}
+
+.ui-c-typography.ui-typography-size--subtitle2 {}
+
+.ui-c-typography.ui-typography-size--body1 {}
+
+.ui-c-typography.ui-typography-size--body2 {}
+
+.ui-c-typography.ui-typography-size--overview {}
 
 .h1 {
   font-size: 9.6rem;
   letter-spacing: -0.01875rem;
 }
+
 .h2 {
   font-size: 6rem;
   letter-spacing: -0.0625rem;
 }
+
 .h3 {
   font-size: 4.8rem;
   letter-spacing: 0rem;
 }
+
 .h4 {
   font-size: 3.4rem;
   letter-spacing: 0.03125rem;
 }
+
 .h5 {
   font-size: 2.4rem;
   letter-spacing: 0rem;
 }
+
 .h6 {
   font-size: 2rem;
   letter-spacing: 0.01875rem;
 }
+
 .subtitle1 {
   font-size: 1.6rem;
   letter-spacing: 0.01875rem;
 }
+
 .subtitle2 {
   font-size: 1.4rem;
   letter-spacing: 0.0125rem;
 }
+
 .body1 {
   font-size: 1.6rem;
   letter-spacing: 0.0625rem;
 }
+
 .body2 {
   font-size: 1.4rem;
   letter-spacing: 0.03125rem;
 }
+
 .caption {
   font-size: 1.2rem;
   letter-spacing: 0.05rem;
 }
+
 .overview {
   font-size: 1rem;
   letter-spacing: 0.1875rem;
